--- a/frontend/src/components/Authentication/login/Login.module.css
+++ b/frontend/src/components/Authentication/login/Login.module.css
@@ -1,27 +1,29 @@
 
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    padding: 30px;
+    
 }
 
 .container {
+    
     width: 30rem;
     height: 80%;
     min-height: 550px;
-    display: flex;
-    flex-direction: column;
+    
     border-radius: 19px;
+    border: solid 2px black;
     background-color: white;
     box-shadow: 0 0 2px rgba(15,15,15,0.28);
     position: relative;
     overflow: hidden;
+
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 200px;
 }
 
 .backDrop {
+    border: solid 2px black;
     width: 260%;
     height: 550px;
     position: absolute;
@@ -49,7 +51,7 @@ body {
 
 .container-title{
     width: 100%;
-    diplay: flex;
+    display: flex;
     flex-direction: column;
 }
 
@@ -104,6 +106,7 @@ button {
     cursor: pointer;
     border-radius: 5px;
     border: 1px solid #61dafb;
+    width: 100%;
 }
 
 button:hover {
@@ -121,12 +124,14 @@ button:focus {
 .container-footer {
     color: black;
     margin: 1rem auto;
+    text-align: center;
 }
 
 .container-footer a{
     color: #61dafb;
     cursor: pointer;
     text-decoration: none;
+    
 }
 
 input[type=date], input[type=datetime-local], input[type=datetime], input[type=email], input[type=month], input[type=number], input[type=password], input[type=search], input[type=tel], input[type=text], input[type=time], input[type=url], input[type=week], select, textarea {
